--- a/LAB5/index.html
+++ b/LAB5/index.html
@@ -48,32 +48,32 @@
                     <main id = "mainContent">
                         <div class = "guitar">
                             <p id = "1"></p>
-                            <img class = "1" src = "https://m.media-amazon.com/images/I/81tQhEEtiEL._AC_SX679_.jpg" alt = "뮤직 엘리 MA34-N 클래식 주니어 기타">
+                            <img class = "1" src = "https://m.media-amazon.com/images/I/81tQhEEtiEL._AC_SX679_.jpg" alt = "뮤직 엘리 MA34-N 클래식 주니어 기타" />
                             <p>click to see more</p>
                         </div>
                         <div class = "keyboard">
                             <p id = "2"></p>
-                            <img class = "1" src = "https://m.media-amazon.com/images/I/81a+qouQNmL._AC_SX425_.jpg" alt = "알레시스 멜로디 키보드 피아노">
+                            <img class = "1" src = "https://m.media-amazon.com/images/I/81a+qouQNmL._AC_SX425_.jpg" alt = "알레시스 멜로디 키보드 피아노" />
                             <p>click to see more</p>
                         </div>
                         <div class = "drum">
                             <p id = "3"></p>
-                            <img class = "1" src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQI6zLQhfdqILEKHrCejz9Ai8HUoagfFF4w8g&usqp=CAU" alt = "전자 드럼">
+                            <img class = "1" src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQI6zLQhfdqILEKHrCejz9Ai8HUoagfFF4w8g&usqp=CAU" alt = "전자 드럼" />
                             <p>click to see more</p>
                         </div>
                         <div class = "bass">
                             <p id = "4"></p>
-                            <img class = "1" src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTvXLpuNTbJ_PWjsWdoT8Wg0s41N6rUYBvtQ&usqp=CAU" alt = "Sawtooth EP 시리즈 베이스 그린">
+                            <img class = "1" src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTvXLpuNTbJ_PWjsWdoT8Wg0s41N6rUYBvtQ&usqp=CAU" alt = "Sawtooth EP 시리즈 베이스 그린" />
                             <p>click to see more</p>
                         </div>
                         <div class = "elecguitar">
                             <p id = "5"></p>
-                            <img class = "1" src = "https://www.stars-music.com/medias/eastone/str-mini-sss-trem-mn-600-165773.jpg" alt = "EASTONE-STR Mini">
+                            <img class = "1" src = "https://www.stars-music.com/medias/eastone/str-mini-sss-trem-mn-600-165773.jpg" alt = "EASTONE-STR Mini" />
                             <p>click to see more</p>
                         </div>
                         <div class = "etc">
-                            <p id = "1"></p>
-                            <img class = "1" src = "https://thumbs.static-thomann.de/thumb/padthumb600x600/pics/bdb/179656/4704847_800.jpg" alt = "Otto Jos. Klier 55 오케스트라 바이올린 4/4">
+                            <p id = "6"></p>
+                            <img class = "1" src = "https://thumbs.static-thomann.de/thumb/padthumb600x600/pics/bdb/179656/4704847_800.jpg" alt = "Otto Jos. Klier 55 오케스트라 바이올린 4/4" />
                             <p>click to see more</p>
                         </div>
                     </main>
@@ -92,7 +92,7 @@
             function initialize(data) {
                 window.onscroll = () => {
                     if ((window.innerHeight + window.scrollY) >= document.body.offsetHeight) {
-                        setTimeout(load(), 1000);
+                        load();
                     }
                 };
                 function load() {
@@ -157,11 +157,17 @@
                         document.querySelector('#mainContent').innerHTML += `<p id = "${datum.id}"></p><div id = class = "${datum.type}"><img class = "${datum.page}" src = "${datum.image}" alt = "${datum.name}" /><p>click to see more</p></div>`;
                     }
                 };
-                var images = document.querySelectorAll('img');
-                images.forEach(info);
-                function info(item) {
-                    document.getElementById(item.id).innerHTML += `제품명: ${item.name} 가격: ${item.price}`;
+                var images = document.getElementsByTagName('img');
+                for (var i = 0; i < images.length; i++) {
+                    images[i].addEventListener('click', informating(images[i]), false);
                 }
+                function informating(image) {
+                    for (var i = 0; i < data.length; i++) {
+                        if (image.alt === data[i].name) {
+                            document.getElementById(data[i].id).innerHTML += `제품명: ${data[i].name}, 가격: ${data[i].price}`;
+                        }
+                    }
+                };
             }
         </script>
     </body>
